apps/maybe-finance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maybe-finance
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: finance.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maybe-finance-web
                port:
                  name: http
  tls:
    - hosts:
        - finance.nasus.dev
      secretName: maybe-finance-tls
